--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,13 @@
 .row {
   height: 50px;
   width: 50px;
-  border: 1px solid bisque;
+  border-radius: 5px;
+  border: 1px solid rgb(87, 48, 0);
 }
 
 .column {
   display: flex;
+}
+.snake {
+  background-color: goldenrod;
 }
